Add some endpoints for receipts Change swagger
