# app/blueprints/receipts/routes.py
@@ -1,27 +1,19 @@
-from flask import jsonify
+from flask import request, jsonify
 from . import bp
+from app.services import receipts_service
+
 
 @bp.route("/", methods=["GET"])
 def get_receipts():
-    # Constant demo data for receipts
-    demo_data = [
-        {
-            "receipt_id": 1,
-            "user_id": 12,
-            "seller_id": 3,
-            "name": "Lidl - potraviny",
-            "uid": "A1B2C3",
-            "total": 45.20,
-            "date": "2025-10-02"
-        },
-        {
-            "receipt_id": 2,
-            "user_id": 12,
-            "seller_id": 5,
-            "name": "Shell - tankovanie",
-            "uid": "B7Z8K1",
-            "total": 60.00,
-            "date": "2025-10-05"
-        }
-    ]
-    return jsonify(demo_data)
+    receipts = receipts_service.get_all_receipts()
+    return jsonify(receipts), 200
+
+
+@bp.route("/", methods=["POST"])
+def create_receipt():
+    data = request.get_json()
+    if not data:
+        return jsonify({"error": "Missing JSON body"}), 400
+
+    response, status = receipts_service.create_receipt(data)
+    return jsonify(response), status
